--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Trezcool</title>
+</head>
+<body>
+    <h1>Trezcool</h1>
+</body>
+</html>
