Update links and about me photo.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     <p class="promo-block-text">Full Stack Software Engineer</p>
                 </div>
                 <ul class="list-inline">
-                    <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                    <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                    <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
-                    <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/trezcool.kambembo" target="_blank" class="social-icons"><i class="icon-social-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/Trezcool_K" target="_blank" class="social-icons"><i class="icon-social-twitter"></i></a></li>
+                    <li><a href="https://github.com/Trezcool" target="_blank" class="social-icons"><i class="icon-social-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/tresor-kambembo-2b131b54/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                 </ul>
             </div>
             <div class="col-sm-6">
