--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<!-- ==============================
-    Project:        Metronic "Acecv" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-================================== -->
 <html lang="en" class="no-js">
 <!-- BEGIN HEAD -->
 <head>
@@ -84,12 +73,12 @@
 <!--========== END HEADER ==========-->
 
 <!--========== SLIDER ==========-->
-<div class="promo-block">
+<div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/05.jpg" style="background: initial">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 sm-margin-b-60">
+            <div class="col-sm-12 sm-margin-b-60">
                 <div class="margin-b-30">
-                    <h1 class="promo-block-title">Tresor <br/> Kambembo</h1>
+                    <h1 class="promo-block-title">Trésor <br/> Kambembo</h1>
                     <p class="promo-block-text">Full Stack Software Engineer</p>
                 </div>
                 <ul class="list-inline">
@@ -98,13 +87,6 @@
                     <li><a href="https://github.com/Trezcool" target="_blank" class="social-icons"><i class="icon-social-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/tresor-kambembo-2b131b54/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                 </ul>
-            </div>
-            <div class="col-sm-6">
-                <div class="promo-block-img-wrap">
-                    <img class="promo-block-img img-responsive" src="img/mockup/avatar-03.PNG" style="max-width: 92%" align="Avatar">
-                    <!--<img class="promo-block-img img-responsive" src="img/mockup/avatar-00.png" style="max-width: 92%" align="Avatar">-->
-                    <!--<img class="promo-block-img img-responsive" src="img/mockup/avatar-00.png" align="Avatar" height="520" width="500">-->
-                </div>
             </div>
         </div>
         <!--// end row -->
@@ -118,14 +100,14 @@
     <div class="container content-lg">
         <div class="row">
             <div class="col-sm-5 sm-margin-b-60">
-                <img class="full-width img-responsive" src="img/500x700/03.JPG" alt="Image">
+                <img class="full-width img-responsive" src="img/mockup/avatar-00.png" alt="Image">
             </div>
             <div class="col-sm-7">
                 <div class="section-seperator margin-b-50">
                     <div class="margin-b-50">
                         <div class="margin-b-30">
                             <h2>About Me</h2>
-                            <p>I'm Tresor Kambembo, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>I am Tresor Kambembo, a full stack software engineer, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
                         <a href="#" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
@@ -141,15 +123,33 @@
                     </div>
                 </div>
                 <div class="progress-box">
-                    <h5>Django <span class="color-heading pull-right">96%</span></h5>
+                    <h5>Java <span class="color-heading pull-right">70%</span></h5>
                     <div class="progress">
-                        <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                     </div>
                 </div>
                 <div class="progress-box">
-                    <h5>AngularJS <span class="color-heading pull-right">77%</span></h5>
+                    <h5>JavaScript <span class="color-heading pull-right">80%</span></h5>
                     <div class="progress">
-                        <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                    </div>
+                </div>
+                <div class="progress-box">
+                    <h5>Django <span class="color-heading pull-right">94%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="94"></div>
+                    </div>
+                </div>
+                <div class="progress-box">
+                    <h5>NodeJS <span class="color-heading pull-right">60%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="60"></div>
+                    </div>
+                </div>
+                <div class="progress-box">
+                    <h5>AngularJS <span class="color-heading pull-right">80%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
                     </div>
                 </div>
                 <div class="progress-box">
@@ -168,6 +168,18 @@
                     <h5>React Native <span class="color-heading pull-right">75%</span></h5>
                     <div class="progress">
                         <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
+                    </div>
+                </div>
+                <div class="progress-box">
+                    <h5>Ansible <span class="color-heading pull-right">65%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="65"></div>
+                    </div>
+                </div>
+                <div class="progress-box">
+                    <h5>Fabric <span class="color-heading pull-right">70%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                     </div>
                 </div>
                 <!-- End Progress Box -->
@@ -351,7 +363,7 @@
             <div class="row">
                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                     <h4>Location</h4>
-                    <a href="#">Parklands, Cape Town</a>
+                    <a href="#">Parklands, Cape Town (South Africa)</a>
                 </div>
                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                     <h4>Phone</h4>
